--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@reactioncommerce/api-plugin-authentication",
+  "name": "api-plugin-authentication",
   "description": "Authentication plugin for the Reaction API",
   "version": "1.1.1",
   "main": "index.js",
